# memorisation-profiles

./: .gitignore  .gitmodules  README.md  makefile  pyproject.toml
conf/: conf.yaml
conf/launcher/: joblib.yaml  slurm.yaml
multipythias/: dataset.py  sample_pile.py  test.ipynb
notebooks/: analysis.ipynb
scripts/: compute_attgt.py  download_pile.py  export_runs.py  get_token_frequencies.py  main.py  make_plots.py  process_pile_validation.py  sample_pile.py
src/: models.py  utilities.py
